# AED-Kit-Delivery-Robot

./: .gitignore  README.md  plot.ipynb  result2.csv  result5.csv  run_AED.sh  video_stream_test.py
.github/ISSUE_TEMPLATE/: documentation.md  feature.md  hotfix.md  question.md  request.md  setup.md
control/: README.md
control/src/main_control/: CMakeLists.txt  package.xml
control/src/main_control/src/: control.cpp
localization/: README.md
localization/Smart-Vehicle-Localization--Perception/gps_imu_ekf/: package.xml
localization/Smart-Vehicle-Localization--Perception/gps_imu_ekf/src/: ekf_test.cpp  ekf_test.hpp
localization/Smart-Vehicle-Localization--Perception/lidar_rviz/: package.xml
localization/Smart-Vehicle-Localization--Perception/lidar_rviz/rviz/: lidar.rviz
localization/Smart-Vehicle-Localization/gps_imu_ekf/src/: ekf_test.cpp  ekf_test.hpp  gps_imu_ekf.hpp
localization/src/Smart-Vehicle-Localization---Perception/gps_imu_ekf/: CMakeLists.txt  package.xml
localization/src/Smart-Vehicle-Localization---Perception/kalman_rviz/: package.xml
perception/: README.md  plot.ipynb  result1.csv  result3.csv  result4.csv  result5.csv  result6.csv
perception/src/euclidean_clustering/: CMakeLists.txt  package.xml
planning/: Astar_cpp.cpp  README.md
planning/devel/: _setup_util.py  local_setup.sh  setup.sh
planning/src/map/: konkuk_v3.osm  konkuk_v4.osm
planning/src/path_planner/: CMakeLists.txt  package.xml
planning/src/path_planner/src/: node.csv  path_planner_node.cpp
src/Smart-Vehicle-Localization---Perception/gps_imu_ekf/: CMakeLists.txt
src/Smart-Vehicle-Localization---Perception/kalman_rviz/: CMakeLists.txt
src/camera_2d_lidar_calibration/config/: config.yaml
src/camera_2d_lidar_calibration/data/: calibration_result.txt  data.txt
src/camera_2d_lidar_calibration/launch/: collect_camera_lidar_data.launch  reprojection.launch
src/camera_2d_lidar_calibration/rviz/: reprojection.rviz  show.rviz
src/euclidean_clustering/: CMakeLists.txt  package.xml
src/euclidean_clustering/msg/: ObjectInfoArray.msg
src/euclidean_clustering/src/: euclidean_clustering.cpp
src/main_control/: package.xml
src/main_control/msg/: Gnss.msg
src/main_control/scripts/: control_record.py
src/main_control/src/: control.cpp
src/map/: realmap_7.osm  realmap_8.osm
src/myahrs_driver-master/launch/: myahrs_driver.launch
src/pass_through_filter/: CMakeLists.txt  package.xml
src/pass_through_filter/src/: pass_through_filter.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: node.csv  path_planner_node.cpp
src/path_planner_v2/: CMakeLists.txt  package.xml
src/path_planner_v2/src/: .~lock.node.csv#  node.csv  node_old.csv  path_planner_node_v2.cpp
src/rplidar_ros/launch/: view_rplidar_a3.launch
src/rplidar_ros/rviz/: rplidar.rviz
src/statistical_outlier_removal/: CMakeLists.txt  package.xml
src/usb_cam-develop/src/: camera_driver.cpp
src/yolov5_ros/launch/: yolov5.launch
src/yolov5_ros/src/: detect.py
(+35 files in other folders)
